if HAVE_AVAHI
AVAHI_DIR = avahi
endif

if HAVE_EDS
EVOLUTION_DIR = evolution
endif

if HAVE_GSTREAMER
GSTREAMER_DIR = gstreamer
endif

if HAVE_KAB
KAB_DIR = kab
endif

if HAVE_KDE
KDE_DIR = kde
endif

if HAVE_LDAP
LDAP_DIR = ldap
endif

if HAVE_LOUDMOUTH
LOUDMOUTH_DIR = loudmouth
endif

if HAVE_XCAP
XCAP_DIRS = xcap resource-list
endif

SUBDIRS = \
	$(AVAHI_DIR) \
	$(EVOLUTION_DIR) \
	$(GSTREAMER_DIR) \
	$(KAB_DIR) \
	$(KDE_DIR) \
	$(LDAP_DIR) \
	$(LOUDMOUTH_DIR) \
	$(LIBNOTIFY_DIR) \
	$(XCAP_DIRS)
