gnomemeeting_SOUNDS = gnomemeeting.wav
gnomemeeting_SOUNDLIST = GnomeMeeting.soundlist

EXTRA_DIST = $(gnomemeeting_SOUNDS) $(gnomemeeting_SOUNDLIST)

gnomemeetingsoundsdir = $(datadir)/sounds/gnomemeeting
gnomemeetingsounds_DATA = $(gnomemeeting_SOUNDS)

soundlistdir = $(sysconfdir)/sound/events
soundlist_DATA = $(gnomemeeting_SOUNDLIST)
